[gd_scene load_steps=9 format=3 uid="uid://bbc2elsk3b8j8"]

[ext_resource type="Script" path="res://projectile scenes/playerabilityprojectiles/cutterabilityprojectile.gd" id="1_rou31"]
[ext_resource type="Texture2D" uid="uid://bb4jqcvaveucn" path="res://kirbySprites/kirby/abilitySprites/cutterProjectile.png" id="2_bf4w4"]

[sub_resource type="AtlasTexture" id="AtlasTexture_tsy4y"]
atlas = ExtResource("2_bf4w4")
region = Rect2(0, 0, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_2vfe3"]
atlas = ExtResource("2_bf4w4")
region = Rect2(20, 0, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_m7two"]
atlas = ExtResource("2_bf4w4")
region = Rect2(40, 0, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_83hmi"]
atlas = ExtResource("2_bf4w4")
region = Rect2(60, 0, 20, 20)

[sub_resource type="SpriteFrames" id="SpriteFrames_ujuag"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tsy4y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2vfe3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m7two")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_83hmi")
}],
"loop": true,
"name": &"default",
"speed": 15.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a7w1q"]
size = Vector2(20, 10)

[node name="cutterprojectile" type="Area2D" groups=["projectile"]]
collision_layer = 3
collision_mask = 3
script = ExtResource("1_rou31")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(14, -3)
sprite_frames = SubResource("SpriteFrames_ujuag")
autoplay = "default"
frame_progress = 0.973655

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(13.5, 0)
scale = Vector2(0.45, 0.4)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(14, 0)
shape = SubResource("RectangleShape2D_a7w1q")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
